- joined site elements in functionalities tree - altered execution course site management - other bugfixes